# api_assincrona_FastAPI

./: .env.example  1.4  README.md  alembic.ini  pyproject.toml  requirements.txt
src/: config.py  database.py  exceptions.py  main.py  security.py
src/controllers/: __init__.py  account.py  auth.py  transaction.py
src/models/: account.py  transaction.py
src/schemas/: account.py  auth.py  transaction.py
src/services/: account.py  transaction.py
src/views/: account.py  auth.py  transaction.py
