[project]
name = "desafio-api-bancaria"
version = "0.1.0"
description = "\"API bancária assíncrona com FastAPI\""
authors = [
    {name = "douglasferreirag",email = "douglas.ferreirag@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.123.9,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
